@@ -58,8 +58,7 @@ def useToolchain = project.hasProperty(toolchainPropertyName) ? project.getPrope
 
 ext.defaultJvmArgs = [
     '--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED',
-    '--add-opens=java.base/java.nio=ALL-UNNAMED',
-    '-Djava.security.manager=allow'  // https://github.com/spring-projects/spring-kafka/issues/3619
+    '--add-opens=java.base/java.nio=ALL-UNNAMED'
 ]
 
 if (useToolchain) {
